<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hive_simulations</name>
  <version>0.0.0</version>
  <description>ROS 2 packages for Hive simulations</description>
  <maintainer email="xogns2079@gmail.com">ryu</maintainer>
  <license>TODO: License declaration</license>

  <!--추가로 만든 ROS package들 이어서 기재-->
  <exec_depend>hive_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
